--- a/app/assets/scss/layout/_footer.scss
+++ b/app/assets/scss/layout/_footer.scss
@@ -1,7 +1,14 @@
 .footer {
-  margin-bottom: 20px;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  margin-top: 50px;
+  background-color: #333;
+  color: #fff;
   .footer-text {
     text-align: center;
     font-size: 12px;
+    a {
+      color: #fff;
+    }
   }
 }
