--- a/app/assets/scss/module/_alerts.scss
+++ b/app/assets/scss/module/_alerts.scss
@@ -1,6 +1,6 @@
 .alert {
   position: relative;
-  padding: 0.75em 1em 0.75em 0em;
+  padding: 0.75em 1.25em;
   margin-bottom: 1em;
   border: 1px solid transparent;
   border-radius: 0.25em;
