--- a/app/assets/scss/screen.scss
+++ b/app/assets/scss/screen.scss
@@ -19,4 +19,5 @@
 @import "module/highlightjs/tomorrow_night";
 @import "module/alerts";
 @import "module/carbon";
-@import "module/mailchimp";
+@import "module/related";
+@import "module/pagenavi";
