--- a/app/assets/scss/layout/_content.scss
+++ b/app/assets/scss/layout/_content.scss
@@ -47,7 +47,7 @@
       color: #333;
       text-decoration: underline;
     }
-    > h1, > h2, > h3, > h4, > h5, > h6 {
+    h1, h2, h3, h4, h5, h6 {
       font-family: "Open Sans", sans-serif;
       font-weight: bold;
       a {
