--- a/app/assets/scss/layout/_content.scss
+++ b/app/assets/scss/layout/_content.scss
@@ -48,12 +48,27 @@
       text-decoration: underline;
     }
     h1, h2, h3, h4, h5, h6 {
-      font-family: "Open Sans", sans-serif;
+      font-family: freight-text-pro, sans-serif;
       font-weight: bold;
       a {
         color: #223843;
         text-decoration: none !important;
       }
+    }
+    h2 {
+      font-size: 2em;
+    }
+    h3 {
+      font-size: 1.8em;
+    }
+    h4 {
+      font-size: 1.6em;
+    }
+    h5 {
+      font-size: 1.4em;
+    }
+    h6 {
+      font-size: 1.2em;
     }
     > time {
       margin-bottom: 15px;
@@ -90,8 +105,8 @@
     }
     h1.post-title {
       margin: 0 0 10px 0;
-      line-height: 1em;
-      font-size: 2em;
+      line-height: 1.2em;
+      font-size: 3em;
       a:hover {
         text-decoration: none;
       }
