--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -1,20 +1,10 @@
 html {
-  font-family: -apple-system, 
-                BlinkMacSystemFont, 
-                "Segoe UI", 
-                Roboto, 
-                Oxygen,
-                Ubuntu,
-                Cantarell,
-                "Fira Sans",
-                "Droid Sans",
-                "Helvetica Neue", 
-                sans-serif; 
+  font-family: 'Lato', sans-serif; 
   // font-family: "Roboto",
   //              sans-serif; 
   font-size: 15px;
   font-weight: 400;
-  color: #223843;
+  color: #333;
 }
 
 a {
